--- a/css/main.css
+++ b/css/main.css
@@ -3,5 +3,8 @@ body {
 }
 
 .bg-img {
+    width: 100%;
+    height: 30vh;
     background-image: url(../img/planeta.jpeg);
+    background-size: contain;
 }
